<resources>
    <string name="app_name">TrashUp</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="description">Trash Up is your easy-to-use app for responsible waste collection. Collect waste, reduce landfills, and earn points for amazing prizes.</string>
    <string name="title">TrashUP!</string>
    <string name="desc_register">Please choose account type you want to register as.</string>
    <string name="sign_in">Sign In</string>
    <string name="title_app">TrashUP!</string>
    <string name="register_title">Choose account type</string>
    <string name="create_as_user">Create As User</string>
    <string name="create_as_driver">Create As Driver</string>
    <string name="create_user_account">Create User Account</string>
    <string name="create_description">Please fill the blank form below</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="enter_password">Enter Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="next">Next</string>
    <string name="complete_your_profile">Complete your profile</string>
    <string name="photo_profile">Photo Profile</string>
    <string name="phone_number">Phone Number</string>
    <string name="insert_phone_number">Insert Phone Number</string>
    <string name="insert_date_of_birth">Insert Date of Birth</string>
    <string name="date_of_birth">Date of Birth</string>
    <string name="address">Address</string>
    <string name="insert_address">Insert Address</string>
    <string name="create_driver_account">Create Driver Account</string>
    <string name="complete_your_driver_profile">Complete Your Driver Profile</string>
    <string name="log_in_as_driver">Log In As Driver</string>
    <string name="log_in_as_user">Log In As User</string>
    <string name="error_empty">Field must not be empty</string>
    <string name="cart">Cart</string>
    <string name="profile">Profile</string>
    <string name="history">History</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="pick_up">Pick Up</string>
    <string name="view_profile">View Profile</string>
    <string name="number_plat">B 1234 GOR</string>
    <string name="number">0812++++++++</string>
    <string name="your_name">David Suryana</string>
    <string name="welcome_back">Welcome Back</string>
    <string name="available_pickup">Available Pickup</string>
    <string name="view_all">View All</string>
    <string name="pick_up_location">Pick Up Location</string>
    <string name="cancel">Cancel</string>
    <string name="chat_user">Chat User</string>
    <string name="my_profile">My Profile</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="reset_password">Reset Password</string>
    <string name="help_center">Help Center</string>
    <string name="log_out">Log Out</string>
    <string name="choose_image">Choose Image</string>
    <string name="insert_name">Insert Name</string>
    <string name="save_information">Save Information</string>
    <string name="passwords_do_not_match">Passwords do not match</string>
    <string name="waiting_for_pick_up">Waiting for Pick Up</string>
    <string name="date_available_pickup">22 \n May</string>
    <string name="weight_waste">%.1fkg of Waste</string>
    <string name="your_address">Jl. Kartini No. 2 Blok C1, Kec. Cipayung, Kota Depok, 11234</string>
    <string name="done_pick_up">Done Pick Up</string>
    <string name="date_done_pickup">22 May 2024</string>
    <string name="change_password">Change Password</string>
    <string name="insert_your_email_and_password">Please insert your email and password</string>
    <string name="new_password">New Password</string>
    <string name="current_password">Current Password</string>
    <string name="detail">Detail</string>
    <string name="accept">Accept</string>
    <string name="in_process">In Process</string>
    <string name="activity">Activity</string>
    <string name="detail_order">Detail Order</string>
    <string name="other_descriptions">Other Descriptions</string>
    <string name="nothing">Nothing</string>
    <string name="title_history">History</string>
    <string name="title_cart">Cart</string>
    <string name="title_profile">Profile</string>
    <string name="hi_message">Hi, %1$s!</string>
    <string name="your_points">Your Points</string>
    <string name="points">100000</string>
    <string name="reedem_points">Reedem Points</string>
    <string name="recent_waste">Recent Waste</string>
    <string name="add_waste">Add Waste</string>
    <string name="confirm">Confirm</string>
    <string name="ic_coin_desc">Icon points</string>
    <string name="card_points">%1$d Points</string>
    <string name="card_weight">%1$.2f Kg of Waste</string>
    <string name="card_date">22 September 2024</string>
    <string name="please_wait">Please wait\nyour pickup is on the way.</string>
    <string name="number_plate">B 1234 JGX</string>
    <string name="chat_driver">Call Driver</string>
    <string name="content_desc_ivProfile">Profile Picture</string>
    <string name="waste_type_label">Waste Type</string>
    <string name="choose_waste_type">Choose type of waste</string>
    <string name="garbage_weight_label">Garbage Weight</string>
    <string name="hint_garbage_weight">e.g. 10Kg</string>
    <string name="other_description_label">Other Description</string>
    <string name="submit">Submit</string>
    <string name="hint_other_desc">Insert something</string>
    <string name="status_waiting">Waiting for Pick-up</string>
    <string name="waste_name">Waste name</string>
    <string name="waste_weight">10 Kg</string>
    <string name="log_in">Log In</string>
    <string name="trash">Trash</string>
    <string name="up">UP!</string>
    <string name="call_user">Call User</string>
    <string name="failure">Image Classifier Tidak berhasil diinisialisasi.</string>
    <string name="item_points">%d Points</string>
    <string name="title_points">Your Points</string>
    <string name="claim_reward">Claim Reward</string>
    <string name="history_points">History Points</string>
    <string name="available_reward">Available Reward</string>
    <string name="title_reward">Voucher Shopping</string>
    <string name="value_reward">Rp 100.000</string>
    <string name="valid_reward">Valid Until Nov 5, 2024</string>
    <string name="cost_reward">100.000 Points</string>
    <string name="detail_reward">Detail Reward</string>
    <string name="title_point_cost">Point Cost</string>
    <string name="desc_reward">Get the best deals with our shopping vouchers! Save big on your favorite brands and products. Simply select a voucher, apply it at checkout, and enjoy instant discounts. Start shopping smarter today!</string>
    <string name="success_login">You have been logged in successfully.</string>
    <string name="successfully_created">Account successfully created, please log in.</string>
    <string name="input_license_plate">Input License Plate</string>
    <string name="license_plate">License Plate</string>
    <string name="loading_data">Loading data..</string>
    <string name="insert_email">Insert Email</string>
    <string name="error_password">Enter your current password!</string>
    <string name="password_user_changed">User password reset successfully</string>
    <string name="password_wrong">Wrong current password</string>
    <string name="empty_pickup">No pickups have been received yet.</string>
    <string name="waste_details">Waste Details</string>
    <string name="faq_q1">What is TrashUp?</string>
    <string name="faq_a1">TrashUp is a mobile application designed to streamline waste bank operations and enhance community involvement in waste management. It helps users manage their waste effectively by providing features such as user profiles, waste collection schedules, and more.</string>
    <string name="faq_q2">How do I update my profile information?</string>
    <string name="faq_a2">To update your profile information:\n
                            1. Open the app and go to the profile section.\n
                            2. Click on the "Edit Profile" button.\n
                            3. Update your name, phone number, date of birth, and address.\n
                            4. Save your changes.</string>
    <string name="faq_q3">How do I select my date of birth?</string>
    <string name="faq_a3">You can select your date of birth using the calendar feature:\n

1. Click on the date of birth field.\n
2. A calendar will appear. Select your birth date from the calendar.\n
3. The selected date will be formatted and displayed in the "yyyy-MM-dd" format..</string>

    <string name="faq_q4">What is a waste bank?</string>
    <string name="faq_a4">A waste bank is a community-driven initiative where residents can deposit their recyclable waste and earn points or money in return. It helps promote recycling and reduces the amount of waste sent to landfills.</string>

    <string name="faq_q5">What types of waste can I deposit?</string>
    <string name="faq_a5">The types of waste you can deposit include paper, plastic, metal, glass, and electronic waste. Check the app for specific details on accepted materials.</string>

    <string name="faq_q6">What types of waste can I deposit?</string>
    <string name="faq_a6">The types of waste you can deposit include paper, plastic, metal, glass, and electronic waste. Check the app for specific details on accepted materials.</string>

    <string name="faq_q7">How do I redeem my points or rewards?</string>
    <string name="faq_a7">You can redeem your points or rewards by going to the "Rewards" section in the app. Select the reward you want to redeem, and follow the instructions provided.</string>
    <string name="waiting_delivered">Press Delivered when the driver has picked up the waste</string>
    <string name="points_not_sufficient">Your points are not sufficient.</string>
    <string name="error_location_is_not_available">Error: location is not available</string>
    <string-array name="waste_types">
        <item>Cardboard</item>
        <item>Glass</item>
        <item>Metal</item>
        <item>Paper</item>
        <item>Plastic</item>
        <item>Nothing</item>
    </string-array>

    <string-array name="voucher_date">
        <item>10 November 2024</item>
        <item>30 November 2024</item>
        <item>30 December 2024</item>
    </string-array>

    <integer-array name="voucher_points">
        <item>20000</item>
        <item>50000</item>
        <item>100000</item>
    </integer-array>

    <integer-array name="voucher_price">
        <item>20000</item>
        <item>50000</item>
        <item>100000</item>
    </integer-array>
</resources>