<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/dark_teal"
    android:orientation="vertical"
    tools:context=".ui.user.points.claim_reward.DetailRewardActivity">
    
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:text="@string/detail_reward"
        android:textStyle="bold"
        android:textColor="@color/white"
        android:textAlignment="center"
        android:textSize="24sp"/>

    <TextView
        android:id="@+id/tv_title_reward"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="72dp"
        android:layout_marginHorizontal="16dp"
        android:text="@string/title_reward"
        android:textColor="@color/white"
        android:textSize="18sp"/>

    <TextView
        android:id="@+id/tv_value_reward"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:text="@string/value_reward"
        android:textStyle="bold"
        android:textColor="@color/white"
        android:textSize="30sp"/>

    <TextView
        android:id="@+id/tv_valid_reward"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="62dp"
        android:layout_marginBottom="30dp"
        android:layout_marginHorizontal="16dp"
        android:text="@string/valid_reward"
        android:textColor="@color/white"
        android:textSize="14sp"/>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/card_desc"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingTop="30dp"
        android:paddingHorizontal="22dp"
        android:background="@drawable/top_radius_cardview">

        <TextView
            android:id="@+id/tv_title_cost"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/title_point_cost"
            android:textStyle="bold"
            android:textSize="24sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

        <TextView
            android:id="@+id/tv_cost_reward"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/cost_reward"
            android:textSize="20sp"
            app:layout_constraintTop_toBottomOf="@id/tv_title_cost"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <TextView
            android:id="@+id/tv_desc_reward"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:text="@string/desc_reward"
            android:textSize="16sp"
            app:layout_constraintTop_toBottomOf="@id/tv_cost_reward"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <com.dicoding.trashup.ui.customview.MyButtonTealBg
            android:id="@+id/btn_claim"
            style="@style/long_btn"
            android:text="@string/claim_reward"
            android:layout_marginTop="52dp"
            app:layout_constraintTop_toBottomOf="@id/tv_desc_reward"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</LinearLayout>