<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.driver.profile.edit.EditProfileActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="70dp">

        <TextView
            android:id="@+id/edit_profile_user_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="33dp"
            android:text="@string/edit_profile"
            android:textSize="18sp"
            android:textStyle="bold"
            android:textColor="@color/dark_title"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />



        <TextView
            android:id="@+id/name_label"
            style="@style/tv_label"
            android:text="@string/name"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="30dp"
            app:layout_constraintTop_toBottomOf="@+id/edit_profile_user_tv" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/nameEditTextLayout"
            style="@style/edit_layout"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/name_label">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/ed_change_name_user"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:textSize="14dp"
                android:hint="@string/insert_name"
                android:inputType="text"
                tools:ignore="SpeakableTextPresentCheck" />
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/email_label"
            style="@style/tv_label"
            android:text="@string/email"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="30dp"
            app:layout_constraintTop_toBottomOf="@+id/nameEditTextLayout" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/emailEditTextLayout"
            style="@style/edit_layout"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/email_label">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/ed_change_email_user"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:textSize="14sp"
                android:hint="@string/insert_email"
                android:inputType="textEmailAddress"
                tools:ignore="SpeakableTextPresentCheck" />
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/phone_number_label"
            style="@style/tv_label"
            android:text="@string/phone_number"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="30dp"
            app:layout_constraintTop_toBottomOf="@+id/emailEditTextLayout" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/phoneNumberEditTextLayout"
            style="@style/edit_layout"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/phone_number_label">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/ed_change_phone_number"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:textSize="14dp"
                android:hint="@string/insert_phone_number"
                android:inputType="phone"
                tools:ignore="SpeakableTextPresentCheck" />
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/date_of_birth_label"
            style="@style/tv_label"
            android:text="@string/date_of_birth"
            android:layout_marginTop="25dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/phoneNumberEditTextLayout" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/dateOfBirthEditTextLayout"
            style="@style/edit_layout_calendar"
            app:layout_constraintEnd_toStartOf="@id/btn_calendar"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/date_of_birth_label">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/ed_change_date_of_birth"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:textSize="14sp"
                android:hint="@string/insert_date_of_birth"
                android:inputType="date"
                tools:ignore="SpeakableTextPresentCheck" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            style="@style/Widget.Material3.Button.IconButton.Filled"
            android:id="@+id/btn_calendar"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_marginEnd="33dp"
            app:icon="@drawable/ic_calendar"
            app:iconSize="33dp"
            android:backgroundTint="@color/light_teal"
            app:cornerRadius="7dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/dateOfBirthEditTextLayout"
            app:layout_constraintBottom_toBottomOf="@id/dateOfBirthEditTextLayout"
            app:layout_constraintTop_toTopOf="@id/dateOfBirthEditTextLayout"/>

        <TextView
            android:id="@+id/address_label"
            style="@style/tv_label"
            android:text="@string/address"
            android:layout_marginTop="25dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/dateOfBirthEditTextLayout" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/addressEditTextLayout"
            style="@style/edit_layout"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/address_label">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/ed_change_address"
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:gravity="start"
                android:ems="10"
                android:textSize="14sp"
                android:hint="@string/insert_address"
                android:inputType="textMultiLine"
                android:maxLines="4"
                tools:ignore="SpeakableTextPresentCheck" />
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/plate_label"
            style="@style/tv_label"
            android:text="@string/license_plate"
            android:layout_marginTop="25dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/addressEditTextLayout" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/plateEditTextLayout"
            style="@style/edit_layout"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/plate_label">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/ed_change_plate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:textSize="14sp"
                android:hint="@string/input_license_plate"
                android:inputType="text"
                tools:ignore="SpeakableTextPresentCheck" />
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/password_label"
            style="@style/tv_label"
            android:text="@string/password"
            android:layout_marginTop="25dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/plateEditTextLayout" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/passwordEditTextLayout"
            style="@style/edit_layout"
            app:endIconMode="password_toggle"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/password_label">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/ed_change_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:textSize="14sp"
                android:hint="@string/enter_password"
                android:inputType="textPassword"
                tools:ignore="SpeakableTextPresentCheck" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.dicoding.trashup.ui.customview.MyButtonTealBg
            android:id="@+id/save_account_driver_btn"
            style="@style/large_btn"
            android:text="@string/save_information"
            android:layout_marginTop="40dp"
            android:layout_marginBottom="50dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/passwordEditTextLayout" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>