<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.signin.LoginDriverActivity">

    <LinearLayout
        android:id="@+id/title_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" >

        <TextView
            android:id="@+id/titleTrash"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/dark_teal"
            android:text="@string/trash"
            android:textSize="50sp"
            android:textStyle="bold" />
        <TextView
            android:id="@+id/titleUp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/light_teal"
            android:text="@string/up"
            android:textSize="50sp"
            android:textStyle="bold" />
    </LinearLayout>

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="122dp"
        android:layout_height="147dp"
        android:src="@drawable/photo_signin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title_view" />

    <TextView
        android:id="@+id/title_signin"
        style="@style/information_title_welcome"
        android:layout_marginTop="28dp"
        android:text="@string/sign_in"
        android:textColor="@color/light_teal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <TextView
        android:id="@+id/desc_signin"
        style="@style/information_desc_welcome"
        android:text="Please insert your email and password"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title_signin" />

    <TextView
        android:id="@+id/email_label"
        style="@style/tv_label"
        android:text="@string/email"
        android:layout_marginTop="30dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/desc_signin" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/emailEditTextLayout"
        style="@style/edit_layout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/email_label">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/ed_login_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:textSize="14dp"
            android:hint="Enter Email"
            android:inputType="textEmailAddress"
            tools:ignore="SpeakableTextPresentCheck" />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/password_label"
        style="@style/tv_label"
        android:text="@string/password"
        android:layout_marginTop="25dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/emailEditTextLayout" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/passwordEditTextLayout"
        style="@style/edit_layout"
        app:endIconMode="password_toggle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/password_label">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/ed_login_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:textSize="14dp"
            android:hint="@string/enter_password"
            android:inputType="textPassword"
            tools:ignore="SpeakableTextPresentCheck" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.dicoding.trashup.ui.customview.MyButtonTealBg
        android:id="@+id/login_btn"
        style="@style/large_btn"
        android:text="@string/log_in"
        android:layout_marginTop="40dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/passwordEditTextLayout" />


</androidx.constraintlayout.widget.ConstraintLayout>